fixed the page taking up too much room than needed

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 
-* {
+html {
     color: gold;
 }
 
 body {
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 86%, rgba(0,212,255,1) 100%);
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .page-wrapper {
@@ -20,17 +22,11 @@ header {
     grid-row-end: 2;
 
     background-size: cover;
-	max-width: 20%;
     font-size: 25px;
 	margin: 40px;
 	padding: 20px;
-
-
-    text-align: center;
-    vertical-align:top;
-    display:inline-block; 
-
-
+    width: 550px;
+    left: 100px;
 }
 
 .summary {
@@ -41,9 +37,10 @@ header {
     
    
     background-size: cover;
-	width: 800px;
     height: 340px;
-    left: 300px;
+    padding: 20px;
+    width: 550px;
+    left: 100px;
 }
 
 .preamble {
@@ -52,11 +49,12 @@ header {
     grid-row-start: 3;
     grid-row-end: 2;   
     
-   
+   position: relative;
     background-size: cover;
 	width: 800px;
     height: 340px;
 	padding: 20px;
+    float: right;
 }
 
 .main {
@@ -78,8 +76,8 @@ header {
 
 	padding: 20px;
 
-    width: 7000px;
-    height: 2500px;
+    max-width: 100%;
+    max-height: 100%;
 
     vertical-align:top;
     display:inline-block; 
